# vitae-health-tracker

./: .gitignore  HELP.md  build-linux.sh  build-mac.sh  cdc-percentiles.js  cdc-percentiles.json  downloads.html  finish-publish.sh  index.html  manifest.webmanifest  package-lock.json  package.json  publish-with-token.sh  release-config.example.json  release-config.json  start-server.sh  sw.js  test-vitae.mjs
.github/workflows/: release.yml
scripts/: generate-icon.mjs  prepare-dist.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
