[package]
name = "vitae-health-tracker"
version = "1.0.0"
description = "Vitae Health Tracker"
authors = ["Vitae"]
edition = "2021"

[lib]
name = "vitae_health_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
